--- a/views/atividades.ejs
+++ b/views/atividades.ejs
@@ -44,12 +44,13 @@
             </div>
             <div class="col-md text-center">
                 <h3>Atividade Cadastradas</h3>
+                <% for (var n = 0; n<dados.length;n++){%>
                 <div class="card">
-                    <div class="card-header">Data:</div>
+                    <div class="card-header">Data: <%=dados[n].data%></div>
                     <div class="card-body">
-                        <div class="card-title">Tipo:</div>
-                        <div class="card-subtitle">Entrega:</div>
-                        <div class="card-text">Orientações:</div>
+                        <div class="card-title">Tipo: <%=dados[n].tipo%></div>
+                        <div class="card-subtitle">Entrega: <%=dados[n].entrega%></div>
+                        <div class="card-text">Orientações: <%=dados[n].instrucoes%></div>
                     </div>
                     <div class="card-footer">
                         <div class="input-group">
@@ -59,6 +60,7 @@
                         </div>
                     </div>
                 </div>
+                <% } %>
             </div>
 
          
