--- a/views/atividades.ejs
+++ b/views/atividades.ejs
@@ -32,6 +32,16 @@
                     </select>
                     <label for="floatingSelect">Tipo de Atividade:</label>
                 </div>
+                <div class="class form-floating">
+                    <select name="disciplina" id="floatingSelect" name="disciplina" class="form-control">
+                        <option value="0">Selecione...</option>
+                        <option value="LP2">Linguagem de Programação</option>
+                        <option value="Inw">Internet</option>
+                        <option value="BD">Banco de Dados</option>
+                        <option value="Mat">Matemática</option>
+                    </select>
+                    <label for="floatingSelect">Disciplina:</label>
+                </div>
                     <label for="" class="form-control">Como entregar:</label>
                     <input type="radio" name="entrega" class="form-check-input" id="" value="tarefa">Tarefa no Teams
                     <input type="radio" name="entrega" class="form-check-input" id="" value="chat">Chat do Teams
@@ -46,9 +56,10 @@
                 <h3>Atividade Cadastradas</h3>
                 <% for (var n = 0; n<dados.length;n++){%>
                 <div class="card">
-                    <div class="card-header">Data: <%=dados[n].data%></div>
+                    <div class="card-header">Data: <%=dados[n].data.getDate()%>/<%=dados[n].data.getMonth()+1%>/<%=dados[n].data.getFullYear()%></div>
                     <div class="card-body">
                         <div class="card-title">Tipo: <%=dados[n].tipo%></div>
+                        <div class="card-title">Disciplina: <%=dados[n].disciplina%></div>
                         <div class="card-subtitle">Entrega: <%=dados[n].entrega%></div>
                         <div class="card-text">Orientações: <%=dados[n].instrucoes%></div>
                     </div>
@@ -56,7 +67,7 @@
                         <div class="input-group">
                             <input type="button" value="Entregue" class="btn btn-success form-control">
                             <input type="button" value="Alterar" class="btn btn-warning form-control">
-                            <input type="button" value="Excluir" class="btn btn-danger form-control">
+                            <input type="button" value="Excluir" class="btn btn-danger form-control" onclick="(window.location.href='/excluir?id=<%=dados[n]._id%>')">
                         </div>
                     </div>
                 </div>
