--- a/views/atividades2.ejs
+++ b/views/atividades2.ejs
@@ -9,11 +9,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
 </head>
 
 <body>
     <div class="container">
-      <a href="/login" class="btn btn-outline-danger logoff">logoff</a>
+      <a href="/login" class="btn btn-outline-danger logoff"><i class="bi bi-power"></i></a>
         <h1 class="text-center">Lista de Atividades</h1>
         <h3 class="text-center">Usuário: <%=nome%>
         </h3>
@@ -84,7 +85,7 @@
                                     <div class="card-footer">
                                         <div class="input-group">
                                             <input type="button" value="Entregue" class="btn btn-success form-control" onclick="(window.location.href='/entregue?id=<%=dados[n]._id%>')"> 
-                                            <input type="button" value="Alterar" class="btn btn-warning form-control">
+                                            <input type="button" value="Alterar" class="btn btn-warning form-control" onclick="(window.location.href='/alterar?id=<%=dados[n]._id%>')">
                                             <input type="button" value="Excluir" class="btn btn-danger form-control" onclick="(window.location.href='/excluir?id=<%=dados[n]._id%>')">
                                         </div>
                                         </div>
@@ -153,7 +154,7 @@
                                             
                                         </div>
                                         </div>
-                                </div> <% }%>
+                                </div><% }%>
                         </div>
                       </div>
                     </div>
@@ -163,6 +164,6 @@
         </div>
     </div>
 </body>
-<!-- JavaScript Bundle with Popper -->
+<!--JavaScript Bundle with Popper-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </html>
